# draxel-0

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  Pixelly2.sln  README.md  vcpkg.json
.github/workflows/: hosted-ninja-vcpkg.yml
Draxel0/: Draxel0.csproj  GamePad.cs  Gpu.cs  Keyboard.cs  Machine.cs  Mouse.cs  Palette.cs  PixelMode1.cs  Program.cs  TextMode.cs  Textures1.cs  Utility.cs
Pixelly2/: Pixelly2.cpp  Pixelly2.vcxproj  base.cpp  base.h  base_intern.hpp  gpu.cpp  gpu.h  input.cpp  input.h  machine.cpp  machine.h  vcpkg.json
Pixelly2/data/scripts/: bios.as  boot.as
PixellyLib/: CMakeLists.txt
PixellyLib/include/: base.hpp  gpu.hpp  input.hpp  machine.hpp
PixellyLib/src/: gpu.cpp  input.cpp  machine.cpp
data/scripts/lua/: boot.lua
data/scripts/lua/drxl/: cli.lua
data/scripts/lua/drxl/cli/: base.lua  cd.lua  command.lua  del.lua
data/scripts/lua/pxly/: cli.lua
data/scripts/lua/pxly/cli/: base.lua  call.lua  cls.lua  dir.lua  help.lua  interpreter.lua  mkdir.lua
include/: base.hpp  gpu.hpp  input.hpp  machine.hpp
include/gpu/: pixmode1.hpp  textmode.hpp
include/internal/: utility.hpp
src/: Pixelly2.cpp  base.cpp  draxel-0.cpp  gpu.cpp  gpu_palette.cpp  gpu_pixmode1.cpp  gpu_textmode.cpp  gpu_texture1.cpp  gpu_textures1.cpp  input.cpp  machine.cpp
src/apis/: lua.cpp
src/apis/lua/: gpu.cpp  input.cpp  intern.cpp  lua_gpu.cpp  lua_input.cpp  lua_intern.cpp
